syntax = "proto3";
package transcoding;
option go_package = "github.com/svaan1/tcc-go/internal/grpc/transcoding";
import "google/protobuf/timestamp.proto";

service VideoTranscoding {
    // Stream establishes a bidirectional communication channel between orchestrator and nodes
    rpc Stream(stream NodeMessage) returns (stream OrchestratorMessage);
    rpc GetAllNodes(GetAllNodesRequest) returns (GetAllNodesResponse);
    rpc EnqueueJob(EnqueueJobRequest) returns (EnqueueJobResponse);
}

message MessageBase {
    string message_id = 1; // Unique identifier for request/response correlation
    google.protobuf.Timestamp timestamp = 2;
}

message EncodingProfile {
    string name = 1;
    string codec = 2;
    repeated string params = 3;
    double encode_time = 4;
    double decode_time = 5;
    double fps = 6;
    double score = 7;
}

// Messages sent FROM nodes TO orchestrator
message NodeMessage {
    MessageBase base = 1;
    oneof payload {
        RegisterRequest register_request = 2;
        ResourceUsageRequest resource_usage_request = 3;
        DisconnectRequest disconnect_request = 5;
        JobCompletionRequest job_completion_request = 6;
        JobAssignmentResponse job_assignment_response = 7;
    }
}

// Messages sent FROM orchestrator TO nodes
message OrchestratorMessage {
    MessageBase base = 1;
    oneof payload {
        RegisterResponse register_response = 2;
        JobAssignmentRequest job_assignment_request = 4;
        DisconnectResponse disconnect_response = 7;
    }
}

message RegisterRequest {
    string name = 1;
    repeated EncodingProfile encoding_profiles = 2;
}

message RegisterResponse {
    string node_id = 1;
    bool success = 2;
    string message = 3;
}

message ResourceUsageRequest {
    string node_id = 1;
    double cpu_percent = 2;
    double memory_percent = 3;
    double disk_percent = 4;
}

message ResourceUsageResponse {
    bool success = 1;
    string message = 2;
}

message JobAssignmentRequest {
    string job_id = 1;
    string input_path = 2;
    string output_path = 3;
    string profile_name = 4;
}

message JobAssignmentResponse {
    string job_id = 1;
    bool accepted = 2;
    string message = 3;
}

message JobCompletionRequest {
    string job_id = 1;
    bool success = 2;
    string message = 3;
}

message DisconnectRequest {
    string node_id = 1;
    string reason = 2;
}

message DisconnectResponse {
    bool acknowledged = 1;
}

message GetAllNodesRequest {}

message NodeInfo {
    string node_id = 1;
    string name = 2;
    repeated EncodingProfile encoding_profiles = 3;
    double cpu_percent = 4;
    double memory_percent = 5;
    double disk_percent = 6;
    google.protobuf.Timestamp last_seen = 7;
}

message GetAllNodesResponse {
    repeated NodeInfo nodes = 1;
    int32 total_count = 2;
}

message EnqueueJobRequest {
    string input_path = 1;
    string output_path = 2;
    string profile_name = 3;
}

message EnqueueJobResponse {
    string job_id = 1;
    bool success = 2;
    string message = 3;
}